; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_unsetv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_unsetv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varent = type { i32 }

@shvhed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unsetv(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.varent*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.varent* @adrof1(i32* %4, i32* @shvhed)
  store %struct.varent* %5, %struct.varent** %3, align 8
  %6 = icmp eq %struct.varent* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @udvar(i32* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.varent*, %struct.varent** %3, align 8
  %12 = call i32 @unsetv1(%struct.varent* %11)
  ret void
}

declare dso_local %struct.varent* @adrof1(i32*, i32*) #1

declare dso_local i32 @udvar(i32*) #1

declare dso_local i32 @unsetv1(%struct.varent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
